apps/service/k8s/prod/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "diligence-kit-service-service"
  namespace: "prod"
  annotations:
    cloud.google.com/backend-config: '{"default": "diligence-kit-service-backend-config"}'
spec:
  type: NodePort
  selector:
    app: "diligence-kit-service"
  ports:
  - port: 3001
    targetPort: 3001
    name: http
