apps/service/k8s/prod/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "diligence-kit-service-ingress"
  namespace: "prod"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: diligence-kit-service-prod-ip
    networking.gke.io/managed-certificates: diligence-kit-service-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: "diligence-kit-service-service"
      port:
        number: 3001
